SUBDIRS = . panda examples

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = panda.pc

lib_LTLIBRARIES = libpanda.la
libpanda_la_SOURCES = annotate.c curves.c database.c date.c font.c fontmetrics.c info.c memory.c panda.c trailer.c error.c images.c internal.c md5c.c objects.c template.c text.c utility.c view.c xref.c
