dnl Process this file with autoconf to produce a configure script.
AC_INIT(panda.c)
AC_CONFIG_AUX_DIR(config)
AC_REVISION
AM_INIT_AUTOMAKE(panda, 0.4)
AM_MAINTAINER_MODE

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_PROG_INSTALL
AC_PROG_RANLIB

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>


dnl -ldmalloc:
AC_CHECK_LIB(dmalloc, malloc)

dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -lpng:
AC_CHECK_LIB(png, png_libpng_ver)

dnl -ltiff:
AC_CHECK_LIB(tiff, TIFFOpen)

dnl -ljpeg:
AC_CHECK_LIB(jpeg, jpeg_std_error)

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/stat.h)
AC_CHECK_HEADERS(pthread.h)

dnl Headers for libraries
AC_CHECK_HEADERS(jpeglib.h)
AC_CHECK_HEADERS(tiffio.h)

dnl Windows specific headers
AC_MSG_CHECKING(if this is a windows box)
AC_MSG_RESULT()
AC_CHECK_HEADERS(windows.h, PLATFORM=WINDOWS, PLATFORM=UNIX)
AC_SUBST(PLATFORM)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_FUNC_SNPRINTF


AC_OUTPUT(panda/Makefile man/Makefile Makefile)




