dnl Process this file with autoconf to produce a configure script.
AC_INIT(panda.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AC_REVISION
AM_INIT_AUTOMAKE(panda, 0.5.2)
AM_MAINTAINER_MODE

dnl Libtool
AC_LIBTOOL_WIN32_DLL
AC_LIBTOOL_DLOPEN

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl The syntax is library name, function, action if found, action if not found
dnl We just use the default if found action which adds -l<lib> to the LIBS var
dnl and #defined HAVE_LIB<lib>


dnl -lm:
AC_CHECK_LIB(m, atan)

dnl -ldmalloc:
dnl AC_CHECK_LIB(dmalloc, malloc)

dnl -lpng::
AC_CHECK_LIB(png, png_libpng_ver, CFLAGS="$CFLAGS -DHAVE_LIBPNG" LDFLAGS="$LDFLAGS -lpng" )

dnl -ltiff:
AC_CHECK_LIB(tiff, TIFFOpen, CFLAGS="$CFLAGS -DHAVE_LIBTIFF"  LDFLAGS="$LDFLAGS -ltiff")

dnl -ljpeg:
AC_CHECK_LIB(jpeg, jpeg_std_error, CFLAGS="$CFLAGS -DHAVE_LIBJPEG"  LDFLAGS="$LDFLAGS -ljpeg")

dnl Checks for header files.
dnl STDC checks for stdlib.h stdarg.h string.h and float.h
AC_HEADER_STDC
AC_CHECK_HEADERS(stdio.h)
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/stat.h)
AC_CHECK_HEADERS(pthread.h)

dnl Headers for libraries
AC_CHECK_HEADERS(jpeglib.h)
AC_CHECK_HEADERS(tiffio.h)

dnl Windows specific headers
AC_MSG_CHECKING(if this is a windows box)
AC_MSG_RESULT()
AC_CHECK_HEADERS(windows.h, PLATFORM=WINDOWS, PLATFORM=UNIX)
AC_SUBST(PLATFORM)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_LIB(libc,snprintf)


AC_OUTPUT(examples/Makefile panda/Makefile Makefile)




