noinst_PROGRAMS = pandademo pandademolegacy circles morecircles empty template

LDADD = -lpanda -L../.libs
INCLUDES = -I..

pandademo_SOURCES = main.c
pandademolegacy_SOURCES = legacymain.c
circles_SOURCES = circles.c
morecircles_SOURCES = morecircles.c
empty_SOURCES = empty.c
template_SOURCES = template.c
