noinst_PROGRAMS = pandademo pandademolegacy circles morecircles empty template exercise

LDADD = -lpanda -L..
INCLUDES = -I..

pandademo_SOURCES = main.c
pandademolegacy_SOURCES = legacymain.c
circles_SOURCES = circles.c
morecircles_SOURCES = morecircles.c
empty_SOURCES = empty.c
template_SOURCES = template.c
exercise_SOURCES = exercise.c
